force-app/main/default/objects/Shelter_Facility__c/Shelter_Facility__c.object-meta.xml
<CustomObject>
    <label>Shelter Facility</label>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shelter Facilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>