force-app/main/default/objects/Shelter_Facility__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Geographic region of this shelter facility. Restricted to values in the Animal Shelter Regions global value set — add new countries there to expand coverage with no deployment.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AnimalShelterRegions</valueSetName>
    </valueSet>
</CustomField>