force-app/main/default/objects/Shelter_Facility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Active__c</columns>
    <columns>Endpoint_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>